#pragma once

#include <iostream>
#include <string>

class IShape
{
public:
    virtual std::string ShowInfo() = 0;
};
